// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render code 1`] = `
<td
  className="source-line-code code"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <span
        className="k"
        key="1"
      >
        t
      </span>
      <span
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
</td>
`;

exports[`render code: with additional child 1`] = `
<td
  className="source-line-code code"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <span
        className="k"
        key="1"
      >
        t
      </span>
      <span
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
  <div>
    additional child
  </div>
</td>
`;

exports[`render code: with secondary location 1`] = `
<td
  className="source-line-code code"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <Tooltip
        key="marker-1"
        overlay={
          <IssueMessageHighlighting
            message="secondary-location-msg"
          />
        }
        placement="top"
      >
        <LocationIndex
          aria-current={false}
          leading={false}
          onClick={[Function]}
          selected={false}
        >
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </LocationIndex>
      </Tooltip>
      <span
        className="k issue-location"
        key="1"
      >
        t
      </span>
      <span
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
</td>
`;
